# GameOfLife

./: .clang-tidy  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: Coverage.yml  Linux.yml  StaticAnalysis.yml  Windows.yml
src/: CMakeLists.txt  assert.hpp  coord.cpp  coord.hpp  gol_scene.cpp  gol_scene.hpp  log.cpp  log.hpp  main.cpp  preview_scene.cpp  preview_scene.hpp  scene.hpp  sdl.cpp  sdl.hpp  view.cpp  view.hpp
src/thread/: CMakeLists.txt  ring_buffer.hpp  thread_pool.cpp  thread_pool.hpp
tests/: CMakeLists.txt  ring_buffer_test.cpp
